--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Emuna",
+    "name": "אמונה",
     "slug": "Emuna",
     "version": "1.0.0",
     "orientation": "portrait",
