--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-view-shot": "^3.7.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
