--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^7.3.27",
     "babel-preset-expo": "^54.0.3",
     "expo": "~54.0.12",
+    "expo-background-fetch": "~14.0.7",
     "expo-blur": "~15.0.7",
     "expo-dev-client": "~6.0.13",
     "expo-file-system": "~17.0.1",
@@ -26,6 +27,7 @@
     "expo-media-library": "~18.2.0",
     "expo-notifications": "^0.32.12",
     "expo-status-bar": "~3.0.8",
+    "expo-task-manager": "~14.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
